# tcc

./: .gitignore  .tool-versions  README.md
experiments/: README.md  config.py  create_correct_sample.py  examples.py  experiments.db  experiments.ipynb  experiments.py  models.py  municipios.py  output.xlsx  pyproject.toml  repository.py  script.py  utils.py
experiments/chroma/examples/: chroma.sqlite3
experiments/resources/: ground_truth_data.json  ground_truth_gold.csv  ground_truth_gold_standard.csv
experiments/resources/prompts/: improvement.yaml  llm.yaml  rag.yaml  shots.yaml
experiments/resources/results/improvement/metrics/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
experiments/resources/results/improvement/output/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
experiments/resources/results/llm/metrics/: 0.json  1.json  2.json  3.json
experiments/resources/results/llm/output/: 0.json  1.json  2.json  3.json
experiments/resources/results/rag/metrics/: 1.json  10.json  11.json  (+33 more)
experiments/src/: config.py  create_correct_sample.py  examples.py  experiments.ipynb  experiments.py  main.py  metrics.py  models.py  rag.py  repository.py  utils.py
experiments/src/chroma/examples/: chroma.sqlite3
experiments/src/data/: experiment.py  models.py  municipios.py
experiments/src/models/: models.py
experiments/src/notebooks/: experiments.ipynb
experiments/src/prompts/: shots.yaml
experiments/src/resources/: prompts.yaml
experiments/src/scripts/: create_correct_sample.py  create_xlxs.py
(+83 files in other folders)
